:rainbow: Massive rough pass at app layout

--- a/addon/components/docs-footer/template.hbs
+++ b/addon/components/docs-footer/template.hbs
@@ -1,1 +1,1 @@
-<div class="copyright">&copy; {{thisYear}}</div>
+<div class="copyright align-right">&copy; {{year}} HealthSparq Open Source Labs</div>
