--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,1 +1,7 @@
+// ========================================================
+// Example App Styles
+// ========================================================
+@import 'normalize';
+@import 'skeleton';
+
 @import "styles";
