--- a/addon/components/docs-get-started/template.hbs
+++ b/addon/components/docs-get-started/template.hbs
@@ -1,3 +1,2 @@
 <h1>Welcome to Ember Fountainhead!</h1>
-<p>It looks like you haven't generated your app's documentation yet. To get started,
-  run <pre>ember fountainhead-gendocs</pre>.</p>
+<p>It looks like you haven't generated your app's documentation yet. To get started, run <code>ember fountainhead-gendocs</code>.</p>
