--- a/app/styles/modules/_header.scss
+++ b/app/styles/modules/_header.scss
@@ -2,17 +2,31 @@
 // =============================================
 
 .docs-header {
-  width: 100%;
+  display: flex;
   background: #2b2b2b;
-  color: #fff;
+  color: $white;
   padding: 1rem 5rem;
   margin-bottom: 50px;
+  justify-content: space-between;
+  align-items: center;
 
   .logo-home {
     max-width: 200px;
   }
 
   .docs-logo {
-    max-width: 100%;
+    max-height: 50px;
+  }
+
+  .docs-github-link {
+    color: $white;
+
+    a {
+      color: $white;
+    }
+
+    svg {
+      fill: currentColor;
+    }
   }
 }
