--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -12,6 +12,8 @@ $gray-3: #c2bfbd;
 $gray-4: #e0e0df;
 $light-gray: #f1f1f1;
 
+$border-color: #f1f1f1;
+
 // Blues
 $primary-blue: #3486c0;
 $teal: #074e68;
