--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -16,4 +16,5 @@
 @import 'modules/code-blocks';
 @import 'modules/footer';
 @import 'modules/header';
+@import 'modules/sidebar';
 @import 'modules/typography';
