--- a/app/styles/modules/_code-blocks.scss
+++ b/app/styles/modules/_code-blocks.scss
@@ -15,16 +15,18 @@ code {
 }
 
 // hljs === highlight js code blocks
-.hljs {
-  padding: 0;
+pre.hljs {
+  // padding: 0;
   border-radius: 4px;
   margin-bottom: 20px;
+  font-size: 0.85rem;
+  line-height: 1.2;
+  // Ember HLJS makes is add an extra line to the top of every code sample,
+  // offset here with margin
+  margin: -1rem 20px 1rem;
 
-  pre {
-    font-size: 0.85rem;
-    line-height: 1.2;
-    // Ember HLJS makes is add an extra line to the top of every code sample,
-    // offset here with margin
-    margin: -1rem 20px 1rem;
+  code {
+    background: #3f3f3f;
+    border-color: transparent;;
   }
 }
