Update project to take advantage of included hook and namespace project css

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -4,4 +4,6 @@
 @import 'normalize';
 @import 'skeleton';
 
-@import "styles";
+// Addon Styles
+@import 'ember-component-playground/styles';
+@import "ember-fountainhead/styles";
