--- a/app/styles/ember-fountainhead/modules/_typography.scss
+++ b/app/styles/ember-fountainhead/modules/_typography.scss
@@ -39,6 +39,7 @@ h4 { font-weight: bold }
 
 a {
   text-decoration: none;
+  color: $primary-blue;
 
   &:visited {
     text-decoration: none;
@@ -52,6 +53,7 @@ a {
 }
 
 .link {
+  color: $primary-blue;
   cursor: pointer;
   font-weight: normal;
 
