--- a/app/styles/ember-fountainhead/modules/_code-blocks.scss
+++ b/app/styles/ember-fountainhead/modules/_code-blocks.scss
@@ -16,17 +16,16 @@ code {
 
 // hljs === highlight js code blocks
 pre.hljs {
-  // padding: 0;
   border-radius: 4px;
-  margin-bottom: 20px;
   font-size: 0.85rem;
   line-height: 1.2;
-  // Ember HLJS makes is add an extra line to the top of every code sample,
-  // offset here with margin
-  margin: -1rem 20px 1rem;
+  margin: 1rem 0;
 
   code {
     background: #3f3f3f;
-    border-color: transparent;;
+    border-color: transparent;
+    display: block;
+    padding: 1rem 1.5rem;
+    white-space: pre;
   }
 }
