Cleaned up docs generation script and fixed pre-script validations

--- a/addon/components/docs-page/title-bar/template.hbs
+++ b/addon/components/docs-page/title-bar/template.hbs
@@ -1,4 +1,5 @@
-{{title}}
+{{! @TODO Handle Class/Module }}
+{{title}} Class
 <small>
   <a class="source-icon" href="{{classUrl}}" target="_blank">[source]</a>
 </small>
