Use prism for highlighting instead of of highlightjs

--- a/app/styles/ember-fountainhead/_styles.scss
+++ b/app/styles/ember-fountainhead/_styles.scss
@@ -19,3 +19,6 @@
 // Doc
 @import 'modules/title-bar';
 @import 'modules/attributes';
+
+// Prism
+@import 'prism-panda'; // TODO: make this optional && configurable
