Create styles for attrs and start migrating files to master fountain dir

--- a/addon/components/fountain/doc-page/class-item/template.hbs
+++ b/addon/components/fountain/doc-page/class-item/template.hbs
@@ -18,7 +18,7 @@
 {{/if}}
 
 {{#if item.description}}
-  {{docs-page.live-description descriptionText=item.description}}
+  {{fountain.doc-page.live-description descriptionText=item.description}}
 {{/if}}
 
 {{#if item.params}}
