Rename and relocate doc-page header component

--- a/addon/components/fountain/doc-page/template.hbs
+++ b/addon/components/fountain/doc-page/template.hbs
@@ -1,5 +1,6 @@
-{{fountain.doc-page.title-bar
-  title=content.name
+{{fountain.doc-page.header
+  name=content.name
+  file=content.file
   classUrl=(concat content.file '#' content.line)}}
 
 {{fountain.doc-page.attributes
