--- a/app/styles/ember-fountainhead/_styles.scss
+++ b/app/styles/ember-fountainhead/_styles.scss
@@ -16,8 +16,8 @@
 @import 'modules/sidebar';
 @import 'modules/class-items';
 @import 'modules/code-blocks';
-// Doc
-@import 'modules/title-bar';
+// Doc Page
+@import 'modules/doc-page/header';
 @import 'modules/attributes';
 
 // Prism
