Rename and relocate doc page meta component

--- a/addon/components/fountain/doc-page/meta/template.hbs
+++ b/addon/components/fountain/doc-page/meta/template.hbs
@@ -1,4 +1,4 @@
-<div class="fountain-meta">
+<div class="doc-meta">
   {{#if extends}}
     <div class="meta-item">
       {{! @TODO: EXTERNAL file path component }}
