--- a/addon/components/fountain/doc-page/template.hbs
+++ b/addon/components/fountain/doc-page/template.hbs
@@ -3,7 +3,7 @@
   file=content.file
   classUrl=(concat content.file '#' content.line)}}
 
-{{fountain.doc-page.attributes
+{{fountain.doc-page.meta
   name=content.name
   extends=content.extends
   file=content.file
