--- a/app/styles/ember-fountainhead/_styles.scss
+++ b/app/styles/ember-fountainhead/_styles.scss
@@ -18,7 +18,7 @@
 @import 'modules/code-blocks';
 // Doc Page
 @import 'modules/doc-page/header';
-@import 'modules/attributes';
+@import 'modules/doc-page/meta';
 
 // Prism
 @import 'prism-panda'; // TODO: make this optional && configurable
