Rename and relocate doc page description component

--- a/addon/components/fountain/doc-page/template.hbs
+++ b/addon/components/fountain/doc-page/template.hbs
@@ -10,7 +10,7 @@
   line=content.line
   is_constructor=content.is_constructor}}
 
-{{fountain.doc-page.live-description descriptionText=content.description}}
+{{fountain.doc-page.description description=content.description}}
 
 {{#each content.classitems as |classItem|}}
   {{fountain.doc-page.class-item item=classItem}}
