--- a/addon/components/fountain/doc-page/template.hbs
+++ b/addon/components/fountain/doc-page/template.hbs
@@ -13,5 +13,5 @@
 {{fountain.doc-page.description description=content.description}}
 
 {{#each content.classitems as |classItem|}}
-  {{fountain.doc-page.class-item item=classItem}}
+  {{fountain.doc-page.class-item classItem=classItem}}
 {{/each}}
