--- a/app/styles/ember-fountainhead/_prism-panda.scss
+++ b/app/styles/ember-fountainhead/_prism-panda.scss
@@ -63,16 +63,8 @@ pre[class*="language-"] {
   }
 }
 
-
-@media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
-		text-shadow: none;
-	}
-}
-
-/* Code blocks */
-pre {
+/* Prism Code blocks */
+pre[class*="language-"] {
 	background: $background;
 	padding: 1em;
 	margin: .5em 0;
@@ -86,7 +78,8 @@ pre {
 	white-space: normal;
 }
 
-/* Begin Color Assignments */
+/* Color Assignments
+/* --------------------------------------------------------------------------- */
 .token.comment,
 .token.prolog,
 .token.doctype,
@@ -188,4 +181,14 @@ div.prism-show-language > div.prism-show-language-label {
 	-ms-transform: none;
 	-o-transform: none;
 	transform: none;
+}
+
+/* Media
+/* --------------------------------------------------------------------------- */
+
+@media print {
+	code[class*="language-"],
+	pre[class*="language-"] {
+		text-shadow: none;
+	}
 }
