--- a/addon/templates/index.hbs
+++ b/addon/templates/index.hbs
@@ -1,6 +1,6 @@
 {{#if model.name}}
-  {{docs-welcome}}
+  {{fountain-head.landing.welcome-message}}
 {{else}}
   {{! If the model doesn't have a name, documentation hasn't been generated }}
-  {{docs-get-started}}
+  {{fountain-head.landing.get-started}}
 {{/if}}
