--- a/addon/templates/classes.hbs
+++ b/addon/templates/classes.hbs
@@ -1,1 +1,2 @@
+{{! TODO: for some reason, this template isn't being properly nested inside of the /docs route }}
 {{fountain-head.doc-page content=model}}
