--- a/addon/templates/docs.hbs
+++ b/addon/templates/docs.hbs
@@ -1,19 +1,21 @@
-<div class="fountainhead-wrapper">
-  {{fountain-head.header logo=model.logo repository=model.repository}}
+<div class="fh-page-in-page-wrapper">
+  <div class="fh-wrapper">
+    {{fountain-head.header logo=model.logo repository=model.repository}}
 
-  <main class="container-fluid">
-    <div class="row">
-      <div class="col-sm-4">
-        {{! Check for a docs classes to know if data is available for sidebar }}
-        {{! Can we update search bar to look good and show always even if there isn't data? }}
-        {{#if model.classes}}
+    <main class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          {{! Check for a docs classes to know if data is available for sidebar }}
+          {{! Can we update search bar to look good and show always even if there isn't data? }}
+          {{#if model.classes}}
           {{fountain-head.sidebar docsMeta=model}}
-        {{/if}}
+          {{/if}}
+        </div>
+        <div class="main-content col-sm-8">
+          {{outlet}}
+        </div>
       </div>
-      <div class="main-content col-sm-8">
-        {{outlet}}
-      </div>
-    </div>
-  </main>
-  {{fountain-head.footer}}
+    </main>
+    {{fountain-head.footer}}
+  </div>
 </div>
