--- a/app/styles/ember-fountainhead/base/_variables.scss
+++ b/app/styles/ember-fountainhead/base/_variables.scss
@@ -1,5 +1,10 @@
+// ========================================================
 // Variables
 // ========================================================
+
+// Z-Indices
+// ---------------------------------------------------------------------------
+$fh-page-in-page-index: 2;
 
 // Elements
 // -----------------------------------------------------------------------------
@@ -28,3 +33,35 @@ $code-border: 1px solid $light-border;
 
 $block-code-border: 1px solid #e1e1e1;
 $block-code-bg: #f1f1f1;
+
+
+// ========================================================
+// Colors
+// ========================================================
+
+$black: #000;
+$white: #fff;
+
+// New Greys
+$dark-gray: #2b2b2b;
+$gray-1: #6d6964;
+$gray-2: #999591;
+$gray-3: #c2bfbd;
+$gray-4: #e0e0df;
+$light-gray: #f1f1f1;
+
+$border-color: #f1f1f1;
+
+// Blues
+$primary-blue: #3486c0;
+$teal: #074e68;
+$dark-blue: #32639a;
+$light-blue: #b8d8f8;
+
+// Status Colors
+$red: #ee0032;
+$orange: #ff8b00;
+$green: #31a271;
+
+// Color Element Variables
+$fh-body-background: $white;
