--- a/addon/templates/docs/classes.hbs
+++ b/addon/templates/docs/classes.hbs
@@ -1,2 +1,1 @@
-{{! TODO: for some reason, this template isn't being properly nested inside of the /docs route }}
-{{fountain-head.doc-page content=model}}
+{{fountain-head/doc-page content=model}}
