Missed Glitter 2.0 slash syntax update :bug:

--- a/addon/templates/docs.hbs
+++ b/addon/templates/docs.hbs
@@ -1,3 +1,4 @@
+{{! TODO: Make this a component }}
 <div class="fh-page-in-page-wrapper">
   <div class="fh-wrapper">
     {{fountain-head/header logo=model.logo repository=model.repository}}
