--- a/addon/templates/docs/index.hbs
+++ b/addon/templates/docs/index.hbs
@@ -4,7 +4,7 @@
 {{! then we know the user hasn't run the doc scripts yet.
 {{! --------------------------------------------------------------------- }}
 {{#if model.name}}
-  {{fountain-head/landing.welcome-message}}
+  {{fountain-head/landing/welcome-message}}
 {{else}}
-  {{fountain-head/landing.get-started}}
+  {{fountain-head/landing/get-started}}
 {{/if}}
