--- a/app/styles/ember-fountainhead/components/_footer.scss
+++ b/app/styles/ember-fountainhead/components/_footer.scss
@@ -1,8 +1,11 @@
 // Footer Styles
 // =============================================
 
-.docs-footer {
-  background: $teal;
-  color: $white;
+.fh-footer {
+  background: $primary;
   padding: 50px 5rem;
+
+  p {
+    color: $white;
+  }
 }
