--- a/app/styles/ember-fountainhead/base/_typography.scss
+++ b/app/styles/ember-fountainhead/base/_typography.scss
@@ -4,88 +4,76 @@
 // Setup
 // -----------------------------------------------------------------------------
 
-html {
-  font-size: $base-font-size * 1px; // Sets application base font size
-  -webkit-font-smoothing: antialiased;
-}
+.fh-page-in-page-wrapper {
+  h1, h2, h3, h4, p {
+    font-family: $font-family;
+    color: $dark-gray;
+    margin-bottom: .5rem;
+    margin-top: .2rem;
+    text-rendering: optimizeLegibility;
+  }
 
-body {
-  font-family: $font-family;
-  color: $dark-gray;
-}
-
-h1, h2, h3, h4, p {
-  margin-bottom: .5rem;
-  margin-top: .2rem;
-  text-rendering: optimizeLegibility;
+  li {
+    font-family: $font-family;
+    font-size: 14px;
+  }
 }
 
 // Headings
 // -----------------------------------------------------------------------------
 
-h1 { font-size: $h1-size * 1rem; line-height: 1.25; }
-h2 { font-size: $h2-size * 1rem; line-height: 1.333; }
-h3 { font-size: $h3-size * 1rem; line-height: 1.5; }
-h4 { font-size: $h4-size * 1rem; line-height: 1.166; }
+.fh-page-in-page-wrapper {
+  h1 { font-size: $h1-size; line-height: 1.25; }
+  h2 { font-size: $h2-size; line-height: 1.333; }
+  h3 { font-size: $h3-size; line-height: 1.5; }
+  h4 { font-size: $h4-size; line-height: 1.166; }
 
-// Header weights
-h1,
-h2 { font-weight: 300; }
-h3 { font-weight: normal; }
-h4 { font-weight: bold }
+  // Header weights
+  h1,
+  h2,
+  h3 { font-weight: 300; }
+  h4 { font-weight: bold }
+}
 
 // Anchors
 // -----------------------------------------------------------------------------
 
-a {
-  text-decoration: none;
-  color: $primary-blue;
-
-  &:visited {
+.fh-page-in-page-wrapper {
+  a {
+    font-family: $font-family;
+    font-size: $base-font-size * 1px;
     text-decoration: none;
-  }
+    color: $link-color;
+    cursor: pointer;
 
-  &:hover,
-  &:active,
-  &:focus {
-    text-decoration: underline;
-  }
-}
+    &:visited {
+      text-decoration: none;
+      color: $link-color;
+    }
 
-.link {
-  color: $primary-blue;
-  cursor: pointer;
-  font-weight: normal;
-
-  &:focus,
-  &:hover {
-    text-decoration: underline;
+    &:hover,
+    &:active,
+    &:focus {
+      color: $link-hover-color;
+      text-decoration: underline;
+    }
   }
 }
 
 // Paragraphs, Body Copy, Decorative Classes
 // -----------------------------------------------------------------------------
 
-p {
-  margin-bottom: 1.42857rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
+.fh-page-in-page-wrapper {
+  p {
+    margin-bottom: 1.42857rem;
+    font-size: $base-font-size * 1px;
+    line-height: 1.5rem;
+  }
 
-// Overriding the user agent styles on this one because
-// why the hell would you make this italic
-address {
-  font-style: normal;
-}
-
-small,
-.small {
-  font-size: .85rem;
-  line-height: 1.15rem;
-}
-
-label {
-  cursor: default;
+  small {
+    font-size: .85rem;
+    line-height: 1.15rem;
+  }
 }
 
 // Utility Classes
@@ -97,10 +85,10 @@ label {
 .bold { font-weight: bold; }
 .normal { font-weight: normal; }
 
-.body-color,
-.body-color:hover {
-  color: $dark-gray;
-}
+// .body-color,
+// .body-color:hover {
+//   color: $dark-gray;
+// }
 
 .align-right { text-align: right; }
 .align-center { text-align: center; }
