--- a/app/styles/ember-fountainhead/components/_header.scss
+++ b/app/styles/ember-fountainhead/components/_header.scss
@@ -1,9 +1,9 @@
 // Header
 // =============================================
 
-.docs-header {
+.fh-header {
   display: flex;
-  background: #2b2b2b;
+  background: $dark-gray;
   color: $white;
   padding: 1rem 5rem;
   margin-bottom: 50px;
