--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -1,8 +1,9 @@
+// =============================================
 // Sidebar
 // =============================================
 
-.docs-sidebar {
-  width: 230px;
+.fh-sidebar {
+  max-width: 275px;
   min-height: 475px;
   border-left: 1px solid $border-color;
   border-right: 1px solid $border-color;
@@ -10,13 +11,24 @@
   .section-header {
     padding: 12px 12px 10px 12px;
     border-top: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+    margin-bottom: 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: normal;
   }
 
   .item-group {
     list-style: none;
+    padding-right: 30px;
+    margin-top: 5px;
+  }
 
-    .item-link {
-      padding: 6px 1em 6px 1em
-    }
+  .item-group-item {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 3px 0 3px;
   }
 }
