--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,8 +1,4 @@
 // ========================================================
 // Example App Styles
 // ========================================================
-@import 'normalize';
-@import 'skeleton';
-
-// Addon Styles
-@import "ember-fountainhead/styles";
+@import  'ember-fountainhead/styles';
