--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,4 +1,4 @@
 // ========================================================
 // Example App Styles
 // ========================================================
-@import  'ember-fountainhead/styles';
+@import  'ember-fountainhead';
