Create modules page styles :lipstick:

--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -5,6 +5,7 @@
 .fh-sidebar {
   max-width: 275px;
   min-height: 475px;
+  margin-left: 150px;
   border-left: 1px solid $border-color;
   border-right: 1px solid $border-color;
 
