--- a/app/styles/ember-fountainhead.scss
+++ b/app/styles/ember-fountainhead.scss
@@ -23,8 +23,9 @@
 @import 'ember-fountainhead/components/footer';
 @import 'ember-fountainhead/components/sidebar';
 
-// Doc Page
-@import 'ember-fountainhead/components/class/header';
+// Doc/Module/Class Page
+@import 'ember-fountainhead/components/docs';
+@import 'ember-fountainhead/components/modules';
 @import 'ember-fountainhead/components/class/meta';
 @import 'ember-fountainhead/components/class/class-items-container';
 @import 'ember-fountainhead/components/class/class-item';
