--- a/app/styles/ember-fountainhead/components/_docs.scss
+++ b/app/styles/ember-fountainhead/components/_docs.scss
@@ -9,6 +9,7 @@
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid $border-color;
+    color: $gray-1;
   }
 
   // Use this header for Fountainhead created headers like `classes && namespaces`
