--- a/app/styles/ember-fountainhead/components/_sidebar.scss
+++ b/app/styles/ember-fountainhead/components/_sidebar.scss
@@ -32,4 +32,9 @@
     overflow: hidden;
     padding: 3px 0 3px;
   }
+
+  .item-link.active {
+    font-weight: bold;
+    text-decoration: underline;
+  }
 }
