--- a/app/styles/ember-fountainhead/base/_utils.scss
+++ b/app/styles/ember-fountainhead/base/_utils.scss
@@ -32,10 +32,11 @@ li[role="presentation"] {
 // ---------------------------------------------------------------------------
 .btn-link {
   font-weight: normal;
-  color: $anchor-font-color;
+  color: $link-color;
   border-radius: 0;
   margin: 0;
   padding: 0;
+  cursor: pointer;
 
   &,
   &:active,
@@ -54,7 +55,7 @@ li[role="presentation"] {
   }
   &:hover,
   &:focus {
-    color: $anchor-font-color-hover;
+    color: $link-hover-color;
     text-decoration: underline;;
     background-color: transparent;
   }
