--- a/app/styles/ember-fountainhead/components/_docs.scss
+++ b/app/styles/ember-fountainhead/components/_docs.scss
@@ -18,3 +18,10 @@
     font-weight: 300;
   }
 }
+
+.fh-description {
+  h1 { font-size: 32px; }
+  h2 { font-size: 24px; }
+  h3 { font-size: 18px; }
+  h4 { font-size: 18px; }
+}
