--- a/app/styles/ember-fountainhead/ember-radical/_tabs.scss
+++ b/app/styles/ember-fountainhead/ember-radical/_tabs.scss
@@ -12,6 +12,7 @@
     width: 100%;
     margin-bottom: 0;
     list-style: none; // override skeleton
+    padding-left: 0;
   }
 
   .tab-li {
@@ -41,20 +42,25 @@
   }
 
   .content-container {
-    padding: 20px;
+    padding: 20px 0;
   }
 
   // Button Style
   // ---------------------------------------------------------------------------
   .button-style {
+    .tab {
+      border: none;
+    }
+
     .tab-li {
       background-color: #fff;
-      border-bottom: 4px solid #0e687a;
+      border-bottom: 4px solid $primary;
     }
 
     .tab.active {
-      background-color: #0e687a;
-      border-color: #0e687a;
+      background-color: $primary;
+      border: 1px solid $primary;
+      border-bottom: 1px solid $primary;
       color : #fff;
     }
   }
